crates/wac-parser/tests/resolution/fail/duplicate-interface-export.wac
interface x {
    x: func();
    x: func();
}